Changes for 1.8.2

 - [ZBX-1899] fixed sticky starttime in graphs (Aly)
 - [ZBX-1785] fixed starttime in screens, slides on screen/slide switch (Aly)
 - [ZBX-1784] improved displaying big numbers and units in graphs (Aly)
 - [ZBX-1764] fixed right Y axis problem if on left Y axis no data (Aly)
 - [ZBX-1912] fixed nonstandart font vertical text display (Vedmak)
 - [ZBX-1915] fixed template/host name check on creation/update (Aly)
 - [ZBX-1820] fixed graph preview in configuration graph form (Aly)
 - [ZBX-1777] fixed evaluating of the maintenance periods (Sasha)
 - [ZBX-1513] fixed reseting user password when updating user and http auth is enabled (Vedmak)
 - [ZBX-1904] fixed naming procedure for discovered IPv6 hosts without DNS provided replacing all not-allowed symbols with '_' (Dmitry)
 - [ZBX-1877] template itself in template linkage popup is now disabled (Vedmak)
 - [ZBX-1896] fixed no permission error when try to view history for web item (Vedmak)
 - [ZBX-1860] fixed line breaks at begin of export xml file (Vedmak)
 - [ZBX-1881] fixed checkbox selection cookies (Vedmak)
 - [DEV-163] improved the description of "perf_counter" check in the "help_items" table (Dmitry)
 - [ZBX-1324] replaced more user visible strings ZABBIX with Zabbix (Richlv)
 - [ZBX-1859] fixed map element image (Aly)
 - [ZBX-954] fix minor typos (Richlv)

Changes for 1.8.1

 - [ZBX-1850] fixed warnings when saving host with enabled profile (Vedmak)
 - [ZBX-1779] fixed incorrect number of problems in Host Status widget (Vedmak)
 - [ZBX-1849] fixed colours of trigger severity in Host Status widget (Vedmak)
 - [ZBX-1757] fixed oracle 1.8 upgrade patch, not null constraints (Vedmak)
 - [ZBX-1762] fixed errors when editing media types (Vedmak)
 - [DEV-445] added support of system.stat[] under AIX (Sasha)
 - [ZBX-1633] fixed sysmaps in PostgreSQL upgrade patch (Sasha)
 - [ZBX-1617] fixed triggers duplicating in template linking for discovered hosts (Sasha)