@@ -1,5 +1,6 @@
 Changes for 1.8.2
 
+ - [ZBX-1862] fixed host creation with link to templates with trigger dependencies (Aly)
  - [ZBX-1899] fixed sticky starttime in graphs (Aly)
  - [ZBX-1785] fixed starttime in screens, slides on screen/slide switch (Aly)
  - [ZBX-1784] improved displaying big numbers and units in graphs (Aly)
